fix block spacing

--- a/index.css
+++ b/index.css
@@ -48,7 +48,7 @@
     /* border: 3px solid rgb(0, 0, 0); */
     /* padding: 20px; */
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-flow: row wrap;
     align-items: stretch;
 
